--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eslint": "^3.13.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\""
   },
   "repository": {
     "type": "git",
