--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "jshint": "^2.9.4"
   },
   "devDependencies": {
-    "eslint": "^3.13.1"
+    "eslint": "^3.13.1",
+    "gulp": "^3.9.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\""
+    "test": "start": "gulp",     "testmocha": "node node_modules/gulp/bin/gulp test",     "postinstall": "node node_modules/gulp/bin/gulp install"
   },
   "repository": {
     "type": "git",
