--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,7 @@ dist: trusty
 language: node_js
 node_js:
   - node
+
+script: npm test
+after_script:
+  - cat ./coverage/**/lcov.info | ./node_modules/coveralls/bin/coveralls.js
