--- a/package.json
+++ b/package.json
@@ -7,11 +7,29 @@
     "jshint": "^2.9.4"
   },
   "devDependencies": {
+    "browser-sync": "^2.18.6",
+    "browserify": "^14.0.0",
+    "coveralls": "^2.11.15",
     "eslint": "^3.13.1",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-browserify": "^0.5.1",
+    "gulp-rename": "^1.2.2",
+    "jasmine": "^2.5.3",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.4.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-coverage": "^1.1.1",
+    "karma-coveralls": "^1.1.2",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.2"
   },
   "scripts": {
-    "test": "start": "gulp",     "testmocha": "node node_modules/gulp/bin/gulp test",     "postinstall": "node node_modules/gulp/bin/gulp install"
+    "test": "gulp test",
+    "start": "gulp",
+    "testmocha": "node node_modules/gulp/bin/gulp test",
+    "postinstall": "node node_modules/gulp/bin/gulp install"
   },
   "repository": {
     "type": "git",
