--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "[![Build Status](https://travis-ci.org/andela-oaromokeye/checkpoint-inverted-index.svg?branch=master)](https://travis-ci.org/andela-oaromokeye/checkpoint-inverted-index)",
   "main": "inverted-index.js",
   "dependencies": {
+    "eslint": "^3.14.1",
+    "eslint-config-airbnb-base": "^11.0.1",
     "jshint": "^2.9.4"
   },
   "devDependencies": {
     "browser-sync": "^2.18.6",
     "browserify": "^14.0.0",
     "coveralls": "^2.11.15",
-    "eslint": "^3.13.1",
+    "eslint": "^3.14.1",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.9.0",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-rename": "^1.2.2",
