--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "browser-sync": "^2.18.6",
     "browserify": "^14.0.0",
+    "browserify-shim": "^3.8.13",
     "coveralls": "^2.11.15",
     "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
@@ -30,7 +31,8 @@
     "karma-firefox-launcher": "^1.0.0",
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.2",
-    "karma-verbose-reporter": "0.0.5"
+    "karma-verbose-reporter": "0.0.5",
+    "sweetalert": "^1.1.3"
   },
   "scripts": {
     "test": "gulp test",
