--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "browser-sync": "^2.18.6",
     "browserify": "^14.0.0",
     "browserify-shim": "^3.8.13",
+    "connect": "^3.5.0",
     "coveralls": "^2.11.15",
     "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
@@ -32,11 +33,14 @@
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-verbose-reporter": "0.0.5",
+    "nodemon": "^1.11.0",
+    "serve-static": "^1.11.2",
     "sweetalert": "^1.1.3"
   },
   "scripts": {
     "test": "gulp test",
-    "start": "./node_modules/.bin/gulp"
+    "dev": "./node_modules/.bin/gulp",
+    "start": "./node_modules/.bin/nodemon server.js"
   },
   "repository": {
     "type": "git",
