--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,8 @@
     "arrow-body-style": ["error", "as-needed"],
     "comma-dangle": 0,
     "no-undef": 0,
+    "no-unused-vars": 0,
+    "no-else-return": 0,
     "dot-notation": 0,
     "brace-style": 0,
     "no-trailing-spaces": 0,
