--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     "no-undef": 0,
     "no-unused-vars": 0,
     "no-else-return": 0,
+    "no-unsed-expressions": 0,
     "dot-notation": 0,
     "brace-style": 0,
     "no-trailing-spaces": 0,
