--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "scripts": {
     "test": "gulp test",
     "dev": "./node_modules/.bin/gulp",
-    "start": "./node_modules/.bin/nodemon server.js"
+    "start": "node_modules/gulp/bin/gulp.js default"
   },
   "repository": {
     "type": "git",
