--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "inverted-index",
   "version": "1.0.0",
-  "description": "[![Build Status](https://travis-ci.org/andela-oaromokeye/checkpoint-inverted-index.svg?branch=master)](https://travis-ci.org/andela-oaromokeye/checkpoint-inverted-index)",
+  "description": "Inverted index takes a JSON array of text objects and creates an index from the array.",
   "main": "inverted-index.js",
+  "engines": {
+    "node": "6.9.1"
+  },
   "devDependencies": {
     "gulp-jasmine": "^2.4.2"
   },
