--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -20,7 +20,7 @@ ratings:
  paths:
  - src/inverted-index.js
 exclude_paths:
-- "jasmine/lib/"
+- "jasmine/lib/jasmine-2.3.4/"
 - gulpfile.js
 - karma.conf.js
 - jasmine/build/bundle.js
