--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-react": "^6.9.0",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
+    "gulp-eslint": "^3.0.1",
     "gulp-rename": "^1.2.2",
     "jasmine": "^2.5.3",
     "jasmine-core": "^2.5.2",
